# zknet

./: .prettierignore  Cargo.toml  README.md  cliff.toml  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  client-publish-to-auto-release.yml  client-test-build-only.yml  ext-release.yml
apps/client/: README.md  cliff.toml  package-lock.json  package.json  project.json
apps/client-cli/: Cargo.toml  project.json
apps/client-cli/assets/: config.json
apps/client-cli/src/: main.rs
apps/client/.github/workflows/: publish-to-auto-release.yml  test-build-only.yml
apps/client/src/: App.css  App.tsx  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json  desktop.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: config.rs  lib.rs  main.rs  ws_server.rs
apps/client/src/components/: Footer.tsx  Header.tsx  Message.tsx  RPCEndpoints.tsx  Updater.tsx  icons.tsx  index.ts
apps/client/src/pages/: Networks.tsx  Settings.tsx  WalletShield.tsx  index.ts
apps/client/src/services/: api.ts
apps/client/src/store/: index.ts
apps/client/src/utils/: index.ts
apps/demo/: index.html  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/demo/src/: App.css  App.tsx
apps/ext/: package.json  project.json  tsconfig.json  wxt.config.ts
apps/ext/entrypoints/: background.ts  content.ts  injected.ts
apps/ext/entrypoints/popup/: App.css  App.tsx  index.html
apps/ext/src/: config.ts  fetch-wire.ts  types.ts  ws-rpc-client.ts
apps/ext/src/messaging/: event.ts  extension.ts  protocol.ts
apps/zknet_client_cli/: Cargo.toml  project.json
libs/rs-core/: Cargo.toml  project.json
libs/rs-core/src/: config.rs  context.rs  lib.rs  net.rs  paths.rs  utils.rs
libs/rs-core/tests/: net.rs
libs/zknet_core/: project.json
