[package]
name = "zknet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
directories-next = "2.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.22", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["full"] }
tempfile = "3.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
